--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Vite + React</title>
   </head>
   <body>
+  <p>
+    Test de l'index de loic
+  </p>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
